<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:layout_marginTop="15sp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/cinepolislogo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:textCursorDrawable="@drawable/color_cursor" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:textCursorDrawable="@drawable/color_cursor" />

        <Button
            android:id="@+id/buttonIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#212e5c"
            android:text="@string/login" />

        <Button
            android:id="@+id/buttonOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#212e5c"
            android:text="@string/logout" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>