<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#E26868"
    android:minHeight="700dp"
    tools:context=".DeleteMovie">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="#E26868"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bordes"
            android:backgroundTint="#afb2b9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bordesadd"
                android:ems="10"

                android:fontFamily="monospace"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/empty"
                android:textAllCaps="true"
                android:textColor="#212e5c"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/genreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:text="@string/genre"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bordesadd"
                android:ems="10"

                android:fontFamily="monospace"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/empty"
                android:textColor="#212e5c"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/yearTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:text="@string/year"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bordesadd"
                android:ems="10"

                android:fontFamily="monospace"
                android:hint="@string/empty"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/empty"
                android:textAllCaps="true"
                android:textColor="#212e5c"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteMovie"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:backgroundTint="#D2001A"
                android:text="@string/delete2"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/cancelDelete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:backgroundTint="#fccf04"
                android:text="@string/cancelar"
                android:textColor="#212e5c"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>