<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/bordes">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.5"
            android:background="#afb2b9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/bordes"
                android:backgroundTint="#8e9096"
                android:fontFamily="monospace"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="#212e5c"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/genreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:text="@string/genre"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/bordes"
                android:backgroundTint="#8e9096"
                android:fontFamily="monospace"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/genre"
                android:textColor="#212e5c"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/yearTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:text="@string/year"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bordes"
                android:backgroundTint="#8e9096"
                android:fontFamily="monospace"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/year"
                android:textColor="#212e5c"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:background="#afb2b9"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:clickable="true"
                android:contentDescription="@string/edit"
                android:focusable="true"
                app:backgroundTint="#fccf04"
                app:fabCustomSize="45dp"
                app:fabSize="normal"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:contentDescription="@string/delete"
                android:focusable="true"
                app:backgroundTint="#D2001A"
                app:fabCustomSize="45dp"
                app:srcCompat="@android:drawable/ic_menu_delete"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>